# streaming_data_loader

./: BasicRunner.ipynb  README.md
maturin_build/: Cargo.toml  pyproject.toml  src
maturin_build/src_old/: lib.rs
rust/: Cargo.toml  context.txt  tst
rust/src/: batcher.rs  config.rs  data_config.rs  endpoint.rs  lib.rs  logger.rs  main.rs  py_conversions.rs  py_interface.rs  test_endpoint.rs  tokenizer_holder.rs  tokenizer_wrapper.rs  utils.rs
rust/src/datasets/: data_generator.rs  dataset.rs  dataset_config.rs  generic_runner.rs  mod.rs
rust/src/masking/: masked_data.rs  masking.rs  masking_config.rs  masking_endpoint.rs  masking_top.rs  mod.rs
rust/src/models/: bert_data.rs  gpt_data.rs  hier_bert_data.rs  mod.rs  simple_batcher.rs  simple_label.rs  simple_transport.rs  t5_data.rs
rust/src/provider/: arrow_provider.rs  arrow_transfer.rs  cache_writer.rs  general_file_provider.rs  gzip_file_provider.rs  mod.rs  pile_datasets.rs  pile_file_provider.rs  provider_config.rs  provider_util.rs  source_filter.rs  wiki_file_provider.rs  zstd_file_provider.rs
rust/src/squad/: mod.rs  squad_arrow.rs  squad_endpoint.rs  squad_top.rs
rust/src/tasks/: arrow_cases.rs  cases.rs  gen_batcher.rs  gen_tokenizer.rs  generic_runner.rs  generic_tokenizer.rs  mod.rs  runner_simple.rs  runner_top.rs  simple_batcher.rs  task_config.rs
rust/src/tokenizer/: mod.rs  tokenizer_config.rs  tokenizer_data.rs  tokenizer_holder.rs  tokenizer_wrapper.rs
rust/src/transport/: channel_transmit.rs  mod.rs  test_endpoint.rs  zmq_receive.rs  (+2 more)
rust/tests/: gpt.yaml  main_test.rs  masking copy.yaml  masking.yaml  masking_test.rs  masking_tests.yaml  multi_label.yaml  single_class.yaml  squad.yaml  squad_tests.yaml  t5.yaml
(+105 files in other folders)
