[package]
name = "data_loader"
version = "0.1.0"
edition = "2021"


[lib]
name = "loader"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features=["json", "stream"]}
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = {version="0.7.4", features = ["io","compat"]} 
async-compression = {version="0.3.14", features=["all"]}
futures = {version = "0.3.24"}
anyhow = {version="1.0.65"}
tokenizers = {version="0.13.1"}
rand = "0.8.5"
serde = "1.0.45"
abomonation="0.7.3"
abomonation_derive="0.5.0"

